<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/scoreTextViewLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/highScoreTextViewLL"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        >

        <TextView
            android:id="@+id/scoreTextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/scoreTextView"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/scoreTextViewLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/highScoreTextViewLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        >

        <TextView
            android:id="@+id/highScoreTextViewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_score"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/highScoreTextView"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <TextView
            android:id="@+id/highScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/highScoreTextViewLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/buttonLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_rules"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/rule1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/_1_tap_the_grey_box_to_score_points"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/rule2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginHorizontal="8dp"
            android:layout_gravity="start"
            android:text="@string/_2_tapping_a_non_grey_box_ends_the_game"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/rule3TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginHorizontal="8dp"
            android:layout_gravity="start"
            android:text="@string/_3_failing_to_tap_the_grey_box_within_1_second_also_ends_the_game"
            android:layout_marginTop="8dp"
            />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintTop_toBottomOf="@id/scoreTextViewLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Row 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_red"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonBlue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_blue"/>

        </LinearLayout>

        <!-- Row 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonYellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_yellow"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_green"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
